--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name"         : "node-web-scrape",
-  "version"      : "0.0.1",
-  "description"  : "Scrape le web.",
-  "main"         : "server.js",
-  "author"       : "Scotch",
-  "dependencies" : {
-    "express"    : "latest",
-    "request"    : "latest",
-    "cheerio"    : "latest",
-    "iconv-lite" : "latest"
+  "name": "node-web-scrape",
+  "version": "0.0.1",
+  "description": "Scrape le web.",
+  "main": "server.js",
+  "author": "Scotch",
+  "dependencies": {
+    "bluebird": "^3.3.3",
+    "cheerio": "latest",
+    "express": "latest",
+    "iconv-lite": "latest",
+    "request": "latest"
   }
 }
